# NoobBoy

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  bus.cpp  bus.hpp  common.hpp  cpu.cpp  cpu.hpp  decoder.cpp  decoder.hpp  executor.cpp  executor.hpp  gb.cpp  gb.hpp  main.cpp  ppu.cpp  ppu.hpp  simple_bus.cpp  simple_bus.hpp  timer.cpp  timer.hpp
tests/: CMakeLists.txt
tests/blarggs_tests/: CMakeLists.txt  dummy_bus.cpp  dummy_bus.hpp  test_cpu_individual_instruction.cpp  test_helper.hpp
tests/single_step_tests_sm83/: CMakeLists.txt  dummy_bus.cpp  dummy_bus.hpp  test_arithmetic_instruction.cpp  test_cb_prefix_instruction.cpp  test_control_flow_instruction.cpp  test_decoder_executor.cpp  test_helper.hpp  test_load_instruction.cpp  test_rotate_shift_instruction.cpp  test_special_instruction.cpp
